--- a/index.html
+++ b/index.html
@@ -39,21 +39,14 @@
       margin-bottom: 10px;
     }
 
-    h1 {
-      font-size: 24px;
-      margin: 10px 0 4px 0;
-    }
-
-    .subtitle {
-      font-size: 13px;
-      color: var(--text-soft);
-    }
+    h1 { font-size: 24px; margin: 10px 0 4px 0; }
+    .subtitle { font-size: 13px; color: var(--text-soft); }
 
     /* MENU PRINCIPAL */
     .main-menu {
       margin: 24px 0;
       display: grid;
-      grid-template-columns: repeat(5, 1fr); /* Indicadores, Comercial, RH, Sistemas, Calendário */
+      grid-template-columns: repeat(5, 1fr);
       gap: 10px;
     }
 
@@ -79,13 +72,8 @@
       border-color: var(--accent-soft);
     }
 
-    .section {
-      margin-bottom: 28px;
-    }
-
-    .hidden {
-      display: none;
-    }
+    .section { margin-bottom: 28px; }
+    .hidden { display: none; }
 
     .section-title {
       font-size: 18px;
@@ -116,23 +104,8 @@
       border-color: var(--accent-soft);
     }
 
-    .link-title {
-      font-size: 15px;
-      font-weight: 600;
-    }
-
-    .link-meta {
-      font-size: 11px;
-      color: var(--text-soft);
-    }
-
-    /* Caixa especial pro calendário corporativo (opcional) */
-    .calendar-wrapper {
-      background: var(--bg-card);
-      border-radius: 12px;
-      border: 1px solid rgba(255, 154, 74, 0.25);
-      padding: 14px;
-    }
+    .link-title { font-size: 15px; font-weight: 600; }
+    .link-meta { font-size: 11px; color: var(--text-soft); }
   </style>
 </head>
 
@@ -141,7 +114,7 @@
 
   <!-- LOGO -->
   <header>
-    <img src="logo-areia-ana.png" class="logo" alt="Logo Grupo Areia Ana">
+    <img src="logo-areia-ana.png" class="logo">
     <h1>Portal de Acessos – Grupo Areia Ana</h1>
     <p class="subtitle">Escolha uma área e clique para abrir o painel ou sistema.</p>
   </header>
@@ -161,38 +134,31 @@
     <div class="grid">
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiNjM2OGI4ZmEtOTc3Zi00NjgzLWE3MDUtYzk0NDBmMDAyN2Y2IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Remessas Usina</div>
-        <div class="link-meta">Power BI</div>
+        <div class="link-title">Remessas Usina</div><div class="link-meta">Power BI</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiM2Q3NzQ0ZDMtZjZmYy00MGJmLTg0NWYtNjU4YTlmMWUyMjUwIiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Inadimplentes</div>
-        <div class="link-meta">Power BI</div>
+        <div class="link-title">Inadimplentes</div><div class="link-meta">Power BI</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiN2JlMzJiZjQtMTcyZS00ZDAyLWIwZDQtYjQxMzM1ZmM4YTE0IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Pedidos – Agregados</div>
-        <div class="link-meta">Power BI</div>
+        <div class="link-title">Pedidos – Agregados</div><div class="link-meta">Power BI</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiMDlhYjhkNDktZWExNC00MTNhLTg2MDctZTYxOWIyZTNjMjM0IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Gastos e Retorno BTs</div>
-        <div class="link-meta">Power BI</div>
+        <div class="link-title">Gastos e Retorno BTs</div><div class="link-meta">Power BI</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiMjdhNGJhYWYtOWIxMC00NzJmLWE1NTAtMmFkYmY0ZjgwYmZjIiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">DRE</div>
-        <div class="link-meta">Power BI</div>
+        <div class="link-title">DRE</div><div class="link-meta">Power BI</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiYWI2N2FlYjgtODJhNi00ODZhLThjMDgtNTZlMGYyMjk4N2Y2IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Volume de Carteira – Usina</div>
-        <div class="link-meta">Power BI</div>
+        <div class="link-title">Volume de Carteira – Usina</div><div class="link-meta">Power BI</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiOTQzNGRhNjQtYjNjZi00YTZjLTkxNzMtODc2MTUzZGQ0MWY5IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Custo por KM / Hora</div>
-        <div class="link-meta">Power BI</div>
+        <div class="link-title">Custo por KM / Hora</div><div class="link-meta">Power BI</div>
       </a>
 
     </div>
@@ -203,43 +169,22 @@
     <div class="section-title">Comercial – ClickUp</div>
     <div class="grid">
 
-      <!-- NOVAS LISTAS DE OPORTUNIDADES -->
-      <a class="link-card" target="_blank"
-         href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
         <div class="link-title">Lista de Oportunidades – Anderson</div>
         <div class="link-meta">ClickUp</div>
       </a>
 
-      <a class="link-card" target="_blank"
-         href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-36453/eb523e88d6e9c38">
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-36453/eb523e88d6e9c38">
         <div class="link-title">Lista de Oportunidades – Márcio</div>
         <div class="link-meta">ClickUp</div>
       </a>
 
-      <!-- Carteira Anderson -->
-      <a class="link-card" target="_blank"
-         href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-24473/3aeab89b75124c2">
-        <div class="link-title">Carteira Anderson</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <!-- Carteira Márcio -->
-      <a class="link-card" target="_blank"
-         href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-30393/59ba2d5bd702322">
-        <div class="link-title">Carteira Márcio</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <!-- Carteira Geral Unificada -->
-      <a class="link-card" target="_blank"
-         href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-12053/62f6757b0d8af35">
+      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-12053/62f6757b0d8af35">
         <div class="link-title">Carteira Geral Unificada</div>
         <div class="link-meta">ClickUp</div>
       </a>
 
-      <!-- Metas e Roteiro Comercial -->
-      <a class="link-card" target="_blank"
-         href="https://doc.clickup.com/9007105436/d/h/8cdv1cw-26593/7d97ad164ca76b9">
+      <a class="link-card" target="_blank" href="https://doc.clickup.com/9007105436/d/h/8cdv1cw-26593/7d97ad164ca76b9">
         <div class="link-title">Metas e Roteiro Comercial</div>
         <div class="link-meta">ClickUp Docs</div>
       </a>
@@ -257,8 +202,7 @@
         <div class="link-meta">Controle de Ponto</div>
       </a>
 
-      <a class="link-card" target="_blank"
-         href="https://sistema.rhgestor.com.br/login?ReturnUrl=%2fPainel%2fIndexMaster">
+      <a class="link-card" target="_blank" href="https://sistema.rhgestor.com.br/login?ReturnUrl=%2fPainel%2fIndexMaster">
         <div class="link-title">RH Gestor</div>
         <div class="link-meta">Sistema de RH</div>
       </a>
@@ -272,53 +216,45 @@
     <div class="grid">
 
       <a class="link-card" target="_blank" href="https://ctasmart.com.br:8443/login">
-        <div class="link-title">CTA Smart</div>
-        <div class="link-meta">Abastecimento</div>
+        <div class="link-title">CTA Smart</div><div class="link-meta">Abastecimento</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://areiaana.bubbleapps.io/version-test/pg_administrativa">
-        <div class="link-title">Bubble – Cargas</div>
-        <div class="link-meta">Sistema Interno</div>
+        <div class="link-title">Bubble – Cargas</div><div class="link-meta">Sistema Interno</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://webmail-seguro.com.br/areiaana.com.br/">
-        <div class="link-title">E-mail Locaweb</div>
-        <div class="link-meta">Webmail</div>
+        <div class="link-title">E-mail Locaweb</div><div class="link-meta">Webmail</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://areiaana-remote.topconsuite.app:20200/pages/auth/login">
-        <div class="link-title">Topcon CRM</div>
-        <div class="link-meta">Comercial Usina</div>
+        <div class="link-title">Topcon CRM</div><div class="link-meta">Comercial Usina</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://analytics.zoho.com/workspace/1762700000040012018">
-        <div class="link-title">Topcon BI</div>
-        <div class="link-meta">Dashboards</div>
+        <div class="link-title">Topcon BI</div><div class="link-meta">Dashboards</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://areiaana.topconsuite.app/">
-        <div class="link-title">Topcon Tech</div>
-        <div class="link-meta">Tecnologia</div>
+        <div class="link-title">Topcon Tech</div><div class="link-meta">Tecnologia</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://areiaana.rastrin.app/">
-        <div class="link-title">Topcon Fleet</div>
-        <div class="link-meta">Rastreadores</div>
+        <div class="link-title">Topcon Fleet</div><div class="link-meta">Rastreadores</div>
       </a>
 
       <a class="link-card" target="_blank" href="https://anaareiasportais.cigam.cloud/">
-        <div class="link-title">Portais CIGAM</div>
-        <div class="link-meta">ERP CIGAM</div>
+        <div class="link-title">Portais CIGAM</div><div class="link-meta">ERP CIGAM</div>
       </a>
 
     </div>
   </section>
 
-  <!-- CALENDÁRIO CORPORATIVO -->
+  <!-- CALENDÁRIO -->
   <section id="calendario" class="section hidden">
     <div class="section-title">Calendário Corporativo</div>
 
-    <div class="calendar-wrapper">
+    <div class="grid">
       <a class="link-card" target="_blank"
          href="https://masterareiaana.github.io/agenda-areia-ana/calendario.html">
         <div class="link-title">Calendário Corporativo – Areia Ana</div>
@@ -330,17 +266,13 @@
 </div>
 
 <script>
-  function showSection(id, btn) {
-    // esconde todas as seções
-    document.querySelectorAll(".section").forEach(sec => sec.classList.add("hidden"));
-    // mostra a seção desejada
-    document.getElementById(id).classList.remove("hidden");
+function showSection(id, btn) {
+  document.querySelectorAll(".section").forEach(sec => sec.classList.add("hidden"));
+  document.getElementById(id).classList.remove("hidden");
 
-    // remove "active" de todos os botões
-    document.querySelectorAll(".menu-btn").forEach(b => b.classList.remove("active"));
-    // adiciona "active" no botão clicado
-    btn.classList.add("active");
-  }
+  document.querySelectorAll(".menu-btn").forEach(b => b.classList.remove("active"));
+  btn.classList.add("active");
+}
 </script>
 
 </body>
