--- a/index.html
+++ b/index.html
@@ -1,329 +1,227 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <title>Portal de Acessos - Grupo Areia Ana</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<title>Portal de Acessos – Grupo Areia Ana</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style>
-    :root {
-      --bg: #050814;
-      --bg-card: #0b1020;
-      --bg-card-soft: #101629;
-      --accent: #ff7a1a;
-      --accent-soft: #ff9b4a;
-      --text: #f5f7ff;
-      --text-soft: #c2c7ff;
-    }
+<style>
+:root {
+  --bg: #050814;
+  --bg-card: #0b1020;
+  --bg-card-soft: #101629;
+  --accent: #ff7a1a;
+  --accent-soft: #ff9b4a;
+  --text: #f5f7ff;
+  --text-soft: #c2c7ff;
+}
 
-    body {
-      font-family: system-ui, sans-serif;
-      background: radial-gradient(circle at top, #151821 0, #050814 45%, #02030a 100%);
-      color: var(--text);
-      margin: 0;
-      padding: 24px;
-    }
+body {
+  font-family: system-ui, sans-serif;
+  background: radial-gradient(circle at top, #151821 0, #050814 45%, #02030a 100%);
+  color: var(--text);
+  margin: 0;
+  padding: 24px;
+}
 
-    .container {
-      max-width: 1150px;
-      margin: auto;
-    }
+/* ===== BLOQUEIO DE SENHA ===== */
+#login {
+  position: fixed;
+  inset: 0;
+  background: radial-gradient(circle at top, #151821 0, #050814 60%, #02030a 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
 
-    header {
-      text-align: center;
-      margin-bottom: 30px;
-    }
+.login-box {
+  width: 100%;
+  max-width: 360px;
+  background: var(--bg-card);
+  border: 1px solid rgba(255,154,74,.3);
+  border-radius: 16px;
+  padding: 24px;
+  text-align: center;
+}
 
-    .logo {
-      width: 180px;
-      margin-bottom: 10px;
-    }
+.login-box h2 {
+  margin: 0 0 10px;
+  color: var(--accent-soft);
+}
 
-    h1 {
-      font-size: 24px;
-      margin: 10px 0 4px 0;
-    }
+.login-box input {
+  width: 100%;
+  padding: 12px;
+  border-radius: 10px;
+  border: 1px solid rgba(255,154,74,.3);
+  background: var(--bg-card-soft);
+  color: var(--text);
+  outline: none;
+}
 
-    .subtitle {
-      font-size: 13px;
-      color: var(--text-soft);
-    }
+.login-box button {
+  width: 100%;
+  margin-top: 12px;
+  padding: 12px;
+  border-radius: 999px;
+  border: none;
+  background: linear-gradient(135deg,var(--accent),var(--accent-soft));
+  font-weight: 700;
+  cursor: pointer;
+}
 
-    /* MENU PRINCIPAL */
-    .main-menu {
-      margin: 24px 0;
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-      gap: 10px;
-    }
+.login-error {
+  margin-top: 10px;
+  font-size: 12px;
+  color: #ff6b6b;
+  min-height: 16px;
+}
 
-    .menu-btn {
-      padding: 12px 14px;
-      border-radius: 999px;
-      border: 1px solid rgba(255, 154, 74, 0.3);
-      background: linear-gradient(135deg, rgba(255,122,26,0.12), rgba(5,8,20,0.95));
-      color: var(--text);
-      font-size: 15px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: .15s;
-    }
+/* ===== PORTAL ===== */
+#portal {
+  display: none;
+  max-width: 1150px;
+  margin: auto;
+}
 
-    .menu-btn.active {
-      background: linear-gradient(135deg, var(--accent), var(--accent-soft));
-      color: #050814;
-    }
+header {
+  text-align: center;
+  margin-bottom: 30px;
+}
 
-    .menu-btn:hover {
-      transform: translateY(-2px);
-      border-color: var(--accent-soft);
-    }
+.logo {
+  width: 180px;
+  margin-bottom: 10px;
+}
 
-    .section {
-      margin-bottom: 28px;
-    }
+.main-menu {
+  margin: 24px 0;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+}
 
-    .hidden {
-      display: none;
-    }
+.menu-btn {
+  padding: 12px;
+  border-radius: 999px;
+  border: 1px solid rgba(255,154,74,.3);
+  background: linear-gradient(135deg,rgba(255,122,26,.12),rgba(5,8,20,.95));
+  color: var(--text);
+  font-weight: 600;
+  cursor: pointer;
+}
 
-    .section-title {
-      font-size: 18px;
-      margin-bottom: 14px;
-      color: var(--accent-soft);
-    }
+.menu-btn.active {
+  background: linear-gradient(135deg,var(--accent),var(--accent-soft));
+  color: #050814;
+}
 
-    /* GRID PADRÃO DOS CARDS */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 12px;
-    }
+.section { display: none; }
+.section.active { display: block; }
 
-    /* GRID ESPECIAL DO CALENDÁRIO (CARD MENOR) */
-    .grid-calendario {
-      display: grid;
-      grid-template-columns: minmax(260px, 420px); /* largura parecida com os outros */
-      justify-content: flex-start;                /* não centraliza, fica alinhado à esquerda */
-      gap: 12px;
-    }
+.section-title {
+  font-size: 18px;
+  color: var(--accent-soft);
+  margin-bottom: 14px;
+}
 
-    .link-card {
-      padding: 14px;
-      background: var(--bg-card);
-      border-radius: 12px;
-      border: 1px solid rgba(255, 154, 74, 0.25);
-      text-decoration: none;
-      color: var(--text);
-      transition: .15s;
-      display: block;
-    }
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(260px,1fr));
+  gap: 12px;
+}
 
-    .link-card:hover {
-      transform: translateY(-2px);
-      background: var(--bg-card-soft);
-      border-color: var(--accent-soft);
-    }
+.link-card {
+  padding: 14px;
+  background: var(--bg-card);
+  border-radius: 12px;
+  border: 1px solid rgba(255,154,74,.25);
+  color: var(--text);
+  text-decoration: none;
+}
 
-    .link-title {
-      font-size: 15px;
-      font-weight: 600;
-    }
-
-    .link-meta {
-      font-size: 11px;
-      color: var(--text-soft);
-    }
-  </style>
+.link-card:hover {
+  background: var(--bg-card-soft);
+}
+</style>
 </head>
 
 <body>
-<div class="container">
 
-  <!-- LOGO / TÍTULO -->
+<!-- LOGIN -->
+<div id="login">
+  <div class="login-box">
+    <h2>Acesso restrito</h2>
+    <input id="senha" type="password" placeholder="Senha do admin">
+    <button onclick="entrar()">Entrar</button>
+    <div class="login-error" id="erro"></div>
+  </div>
+</div>
+
+<!-- PORTAL -->
+<div id="portal">
   <header>
-    <img src="logo-areia-ana.png" class="logo" alt="Logo Areia Ana">
+    <img src="logo-areia-ana.png" class="logo">
     <h1>Portal de Acessos – Grupo Areia Ana</h1>
-    <p class="subtitle">Escolha uma área e clique para abrir o painel ou sistema.</p>
   </header>
 
-  <!-- MENU -->
   <div class="main-menu">
-    <button class="menu-btn active" onclick="showSection('indicadores', this)">Indicadores</button>
-    <button class="menu-btn" onclick="showSection('comercial', this)">Comercial</button>
-    <button class="menu-btn" onclick="showSection('rh', this)">RH</button>
-    <button class="menu-btn" onclick="showSection('sistemas', this)">Sistemas</button>
-    <button class="menu-btn" onclick="showSection('calendario', this)">Calendário</button>
+    <button class="menu-btn active" onclick="abrir('indicadores',this)">Indicadores</button>
+    <button class="menu-btn" onclick="abrir('comercial',this)">Comercial</button>
+    <button class="menu-btn" onclick="abrir('rh',this)">RH</button>
+    <button class="menu-btn" onclick="abrir('sistemas',this)">Sistemas</button>
+    <button class="menu-btn" onclick="abrir('calendario',this)">Calendário</button>
   </div>
 
-  <!-- INDICADORES -->
-  <section id="indicadores" class="section">
-    <div class="section-title">Indicadores – Power BI</div>
+  <section id="indicadores" class="section active">
+    <div class="section-title">Indicadores</div>
     <div class="grid">
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiNjM2OGI4ZmEtOTc3Zi00NjgzLWE3MDUtYzk0NDBmMDAyN2Y2IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Remessas Usina</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiM2Q3NzQ0ZDMtZjZmYy00MGJmLTg0NWYtNjU4YTlmMWUyMjUwIiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Inadimplentes</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiN2JlMzJiZjQtMTcyZS00ZDAyLWIwZDQtYjQxMzM1ZmM4YTE0IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Pedidos – Agregados</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiMDlhYjhkNDktZWExNC00MTNhLTg2MDctZTYxOWIyZTNjMjM0IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Gastos e Retorno BTs</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiMjdhNGJhYWYtOWIxMC00NzJmLWE1NTAtMmFkYmY0ZjgwYmZjIiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">DRE</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiYWI2N2FlYjgtODJhNi00ODZhLThjMDgtNTZlMGYyMjk4N2Y2IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Volume de Carteira – Usina</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://app.powerbi.com/view?r=eyJrIjoiOTQzNGRhNjQtYjNjZi00YTZjLTkxNzMtODc2MTUzZGQ0MWY5IiwidCI6ImNjYjc4MDg1LWRkNjMtNDM3Ny05MWRjLTQ4MjQ0MjRhYzViZiJ9">
-        <div class="link-title">Custo por KM / Hora</div>
-        <div class="link-meta">Power BI</div>
-      </a>
-
+      <div class="link-card">Painéis Power BI</div>
     </div>
   </section>
 
-  <!-- COMERCIAL -->
-  <section id="comercial" class="section hidden">
-    <div class="section-title">Comercial – ClickUp</div>
+  <section id="comercial" class="section">
+    <div class="section-title">Comercial</div>
     <div class="grid">
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-11213/9e63db75b1c3352">
-        <div class="link-title">Lista de Oportunidades – Anderson</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-36453/eb523e88d6e9c38">
-        <div class="link-title">Lista de Oportunidades – Márcio</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-30393/59ba2d5bd702322">
-        <div class="link-title">Carteira Márcio</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-24473/3aeab89b75124c2">
-        <div class="link-title">Carteira Anderson</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sharing.clickup.com/9007105436/l/h/8cdv1cw-12053/62f6757b0d8af35">
-        <div class="link-title">Carteira Geral Unificada</div>
-        <div class="link-meta">ClickUp</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://doc.clickup.com/9007105436/d/h/8cdv1cw-26593/7d97ad164ca76b9">
-        <div class="link-title">Metas e Roteiro Comercial</div>
-        <div class="link-meta">ClickUp Docs</div>
-      </a>
-
+      <div class="link-card">Lista Anderson</div>
+      <div class="link-card">Lista Márcio</div>
     </div>
   </section>
 
-  <!-- RH -->
-  <section id="rh" class="section hidden">
+  <section id="rh" class="section">
     <div class="section-title">RH</div>
-    <div class="grid">
-
-      <a class="link-card" target="_blank" href="https://superportal-empregador.vr.com.br/pontomais">
-        <div class="link-title">Ponto Mais</div>
-        <div class="link-meta">Controle de Ponto</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://sistema.rhgestor.com.br/login?ReturnUrl=%2fPainel%2fIndexMaster">
-        <div class="link-title">RH Gestor</div>
-        <div class="link-meta">Sistema de RH</div>
-      </a>
-
-    </div>
   </section>
 
-  <!-- SISTEMAS -->
-  <section id="sistemas" class="section hidden">
-    <div class="section-title">Sistemas Gerais</div>
-    <div class="grid">
-
-      <a class="link-card" target="_blank" href="https://ctasmart.com.br:8443/login">
-        <div class="link-title">CTA Smart</div>
-        <div class="link-meta">Abastecimento</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://areiaana.bubbleapps.io/version-test/pg_administrativa">
-        <div class="link-title">Bubble – Cargas</div>
-        <div class="link-meta">Sistema Interno</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://webmail-seguro.com.br/areiaana.com.br/">
-        <div class="link-title">E-mail Locaweb</div>
-        <div class="link-meta">Webmail</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://areiaana-remote.topconsuite.app:20200/pages/auth/login">
-        <div class="link-title">Topcon CRM</div>
-        <div class="link-meta">Comercial Usina</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://analytics.zoho.com/workspace/1762700000040012018">
-        <div class="link-title">Topcon BI</div>
-        <div class="link-meta">Dashboards</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://areiaana.topconsuite.app/">
-        <div class="link-title">Topcon Tech</div>
-        <div class="link-meta">Tecnologia</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://areiaana.rastrin.app/">
-        <div class="link-title">Topcon Fleet</div>
-        <div class="link-meta">Rastreadores</div>
-      </a>
-
-      <a class="link-card" target="_blank" href="https://anaareiasportais.cigam.cloud/">
-        <div class="link-title">Portais CIGAM</div>
-        <div class="link-meta">ERP CIGAM</div>
-      </a>
-
-    </div>
+  <section id="sistemas" class="section">
+    <div class="section-title">Sistemas</div>
   </section>
 
-  <!-- CALENDÁRIO -->
-  <section id="calendario" class="section hidden">
-    <div class="section-title">Calendário Corporativo</div>
-    <div class="grid-calendario">
-      <a class="link-card" target="_blank" href="https://masterareiaana.github.io/agenda-areia-ana/calendario.html">
-        <div class="link-title">Calendário Corporativo – Areia Ana</div>
-        <div class="link-meta">Abrir agenda completa</div>
-      </a>
-    </div>
+  <section id="calendario" class="section">
+    <div class="section-title">Calendário</div>
   </section>
-
 </div>
 
 <script>
-  function showSection(id, btn) {
-    document.querySelectorAll(".section").forEach(sec => sec.classList.add("hidden"));
-    document.getElementById(id).classList.remove("hidden");
+const SENHA = "areiaadmin";
 
-    document.querySelectorAll(".menu-btn").forEach(b => b.classList.remove("active"));
-    btn.classList.add("active");
+function entrar() {
+  const s = document.getElementById("senha").value;
+  const e = document.getElementById("erro");
+  if (s === SENHA) {
+    document.getElementById("login").style.display = "none";
+    document.getElementById("portal").style.display = "block";
+  } else {
+    e.textContent = "Senha incorreta";
   }
+}
+
+function abrir(id,btn) {
+  document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
+  document.getElementById(id).classList.add("active");
+  document.querySelectorAll(".menu-btn").forEach(b=>b.classList.remove("active"));
+  btn.classList.add("active");
+}
 </script>
 
 </body>
